# mapleland-2025-christmas-timer

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
background/: poller.py
core/: config.py  supabase.py  timeutils.py
db/: timers.py  users.py
routes/: api.py  auth.py  web.py
services/: discord_api.py
static/: app.css  app.js
templates/: home.html
