[project]
name = "christmas"
version = "0.1.0"
description = ""
authors = [
    {name = "sumin",email = "ksum.jerry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "supabase (>=2.25.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
